--- a/b.html
+++ b/b.html
@@ -9,5 +9,16 @@
     1234
     qwer
     test
+    <div>
+        <table>
+            <tr>
+                aaaaaaaaaaaa
+                bbbbbbbbbbbb
+                dddddddddddddddddddd
+                
+            </tr>
+        </table>
+    </div>
+    </body>
 </body>
 </html>
